Add create to course

--- a/UniversityRegistrar/Views/Courses/Create.cshtml
+++ b/UniversityRegistrar/Views/Courses/Create.cshtml
@@ -12,4 +12,5 @@
 {
     @Html.LabelFor(model => model.CourseName)
     @Html.TextBoxFor(model => model.CourseName)
+    <input type="submit" value="Add new course" />
 }
