--- a/UniversityRegistrar/Views/Courses/Index.cshtml
+++ b/UniversityRegistrar/Views/Courses/Index.cshtml
@@ -14,7 +14,7 @@
 <ul>
     @foreach (Course course in Model)
     {
-        <li>@Html.ActionLink($"Name: {course.CourseName}", "Details", new { id = course.CourseId })</li>
+        <li>@Html.ActionLink($"{course.CourseName}", "Details", new { id = course.CourseId })</li>
     }
 </ul>
 <p>@Html.ActionLink("Add new course", "Create", "Courses")</p>
