--- a/UniversityRegistrar/Views/Students/Create.cshtml
+++ b/UniversityRegistrar/Views/Students/Create.cshtml
@@ -14,4 +14,5 @@
     @Html.TextBoxFor(model => model.StudentName)
     @Html.LabelFor(model => model.EnrollDate)
     @Html.TextBoxFor(model => model.EnrollDate, new {type="date"})
+    <input type="submit" value="Add new student" />
 }
