--- a/UniversityRegistrar/Views/Students/Details.cshtml
+++ b/UniversityRegistrar/Views/Students/Details.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container">
     <h1>Student Details</h1>
-    <h3>@Html.DisplayNameFor(model => model.StudentName): @Html.DisplayFor(model => model.StudentName)</h3>
+    <h3>@Html.DisplayNameFor(model => model.StudentName) @Html.DisplayFor(model => model.StudentName)</h3>
 </div>
 <div class="container">
 @if(@Model.JoinEntities.Count == 0)
@@ -26,5 +26,5 @@ else
 }
 </div>
 <div class="container">
-<p>@Html.ActionLink("Back to all students", "Index")</p>
+<p>@Html.ActionLink("Back to all courses", "Index")</p>
 </div>
