Add edit and delete functions

--- a/UniversityRegistrar/Views/Courses/Details.cshtml
+++ b/UniversityRegistrar/Views/Courses/Details.cshtml
@@ -25,5 +25,5 @@ else
 }
 </div>
 <div class="container">
-<p>@Html.ActionLink("Back to all students", "Index")</p>
+<p>@Html.ActionLink("Back to all courses", "Index")</p>
 </div>
