--- a/UniversityRegistrar/Views/Home/Index.cshtml
+++ b/UniversityRegistrar/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     Layout = "_Layout";
 }
 <h1>Aurora University</h1>
-<h3>Igniting Minds, Illumimating Futures</h3>
+<h3>Igniting Minds, Illuminating Futures</h3>
 
 <p>@Html.ActionLink("See all students","Index","Students")</p>
 <p>@Html.ActionLink("See all courses","Index","Courses")</p>
