--- a/UniversityRegistrar/Views/Students/Details.cshtml
+++ b/UniversityRegistrar/Views/Students/Details.cshtml
@@ -26,5 +26,7 @@ else
 }
 </div>
 <div class="container">
-<p>@Html.ActionLink("Back to all courses", "Index")</p>
+    <p>@Html.ActionLink("Edit Student", "Edit", new { id = Model.StudentId })</p>
+    <p>@Html.ActionLink("Delete Student", "Delete", new { id = Model.StudentId})</p>
+    <p>@Html.ActionLink("Back to all students", "Index")</p>
 </div>
