--- a/UniversityRegistrar/Views/Shared/_Layout.cshtml
+++ b/UniversityRegistrar/Views/Shared/_Layout.cshtml
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My To-Do List!</title>
+    <title>Aurora University</title>
     <link 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
       rel="stylesheet" 
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
       crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/styles.css">
+    <link rel="icon" type="image/x-icon" href="~/img/AU_favicon.jpg">
   </head>
   <body>
     @RenderBody()
