Add action links

--- a/UniversityRegistrar/Views/Courses/Details.cshtml
+++ b/UniversityRegistrar/Views/Courses/Details.cshtml
@@ -25,5 +25,7 @@ else
 }
 </div>
 <div class="container">
-<p>@Html.ActionLink("Back to all courses", "Index")</p>
+    <p>@Html.ActionLink("Edit Course", "Edit", new { id = Model.CourseId })</p>
+    <p>@Html.ActionLink("Delete Course", "Delete", new { id = Model.CourseId})</p>
+    <p>@Html.ActionLink("Back to all courses", "Index")</p>
 </div>
