Add AddCourse and AddStudent functionality

--- a/UniversityRegistrar/Views/Home/Index.cshtml
+++ b/UniversityRegistrar/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 @{
     Layout = "_Layout";
 }
-<h1>Aurora University</h1>
-<h3>Igniting Minds, Illuminating Futures</h3>
-
-<p>@Html.ActionLink("See all students","Index","Students")</p>
-<p>@Html.ActionLink("See all courses","Index","Courses")</p>
+<div class="container">
+    <h1>Aurora University</h1>
+    <h3>Igniting Minds, Illuminating Futures</h3>
+</div>
+<div class="container">
+    <p>@Html.ActionLink("See all students","Index","Students")</p>
+    <p>@Html.ActionLink("See all courses","Index","Courses")</p>
+</div>
