--- a/UniversityRegistrar/Views/Shared/_Layout.cshtml
+++ b/UniversityRegistrar/Views/Shared/_Layout.cshtml
@@ -3,11 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Aurora University</title>
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-      rel="stylesheet" 
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-      crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Borel&family=Exo+2&family=Montserrat:wght@400;600&family=Poppins:wght@200;400&family=Quicksand:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/styles.css">
     <link rel="icon" type="image/x-icon" href="~/img/AU_favicon.jpg">
   </head>
