--- a/UniversityRegistrar/Views/Shared/_Layout.cshtml
+++ b/UniversityRegistrar/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Borel&family=Exo+2&family=Montserrat:wght@400;600&family=Poppins:wght@200;400&family=Quicksand:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/styles.css">
-    <link rel="icon" type="image/x-icon" href="~/img/AU_favicon.jpg">
+    <link rel="icon" type="image/x-icon" href="~/img/AU_logo.png">
   </head>
   <body>
     @RenderBody()
