--- a/UniversityRegistrar/Views/Students/Index.cshtml
+++ b/UniversityRegistrar/Views/Students/Index.cshtml
@@ -4,18 +4,23 @@
 
 @using UniversityRegistrar.Models;
 
-<h1>Students</h1>
+<div class="container">
+    <h1>Students</h1>
+</div>
 
 @if (@Model.Count == 0)
 {
     <p>No students yet added</p>
 }
-
-<ul>
-    @foreach (Student student in Model)
-    {
-        <li>@Html.ActionLink($"Name: {student.StudentName}", "Details", new { id = student.StudentId })</li>
-    }
-</ul>
-<p>@Html.ActionLink("Add new student", "Create", "Students")</p>
-<p>@Html.ActionLink("Return home", "Index", "Home")</p>
+<div class="container">
+    <ul>
+        @foreach (Student student in Model)
+        {
+            <li>@Html.ActionLink($"Name: {student.StudentName}", "Details", new { id = student.StudentId })</li>
+        }
+    </ul>
+</div>
+<div class="link-container">
+    <p>@Html.ActionLink("Add new student", "Create", "Students")</p>
+    <p>@Html.ActionLink("Return home", "Index", "Home")</p>
+</div>
