--- a/UniversityRegistrar/wwwroot/css/styles.css
+++ b/UniversityRegistrar/wwwroot/css/styles.css
@@ -1,12 +1,25 @@
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: #888888;
+    background-color: #2D4B8C;
+    color: #FFC726;
 }
 
 .container {
     
     text-align: center;
 }
+/* a:link {
+    background-color: #FFC726;
+    color: #2D4B8C;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  }
+  
+  a:hover, a:active {
+    background-color: #00A99D;
+  } */
 
 .link-container {
     display: flex;
